# minipc-monitor

./: .gitignore  CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.defaults
components/jpegdec/: jpeg.c
host/: Cargo.toml
host/src/: main.rs  rpc_ble.rs
main/: CMakeLists.txt  epd29.c  epd29.h  fonts.c  fonts.h  gui.c  gui.h  idf_component.yml  minipc-monitor.c  rpc_api.c  rpc_api.h  rpc_ble.c  rpc_ble.h  settings.h
main/driver/: epd29.c  epd29.h
scripts/: fontconvert.py  gen_unicode2gbk.py  jpg2png.py
